# goit-pyweb-hw-14

./: .gitignore  README.md  connect.py  create_db.py  create_table.sql  fake_data.py  insert_db.py  main.py  pyproject.toml  select.py
