[project]
name = "goit-pyweb-hw-14"
version = "0.1.0"
description = ""
authors = [
    {name = "Bomber99-debug",email = "andreyrybchenko16@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "faker (>=40.15.0,<41.0.0)"
]
